--- a/tests/design/css/syiro.css
+++ b/tests/design/css/syiro.css
@@ -380,9 +380,12 @@ div[data-syiro-component="player-control"] > div[data-syiro-component="button"][
 div[data-syiro-component="player-control"] > div[data-syiro-component="button"][data-syiro-component-type="basic"]:not(:first-of-type) {
   float: right;
 }
-div[data-syiro-component="player-control"] > div[data-syiro-component="button"][data-syiro-component-type="basic"][active]:not([data-syiro-minor-component="player-button-play"]) {
+div[data-syiro-component="player-control"] > div[data-syiro-component="button"][data-syiro-component-type="basic"][active]:not([data-syiro-minor-component="player-button-play"]):after {
   color: #333333 !important;
   background-color: #ffffff !important;
+}
+div[data-syiro-component="player-control"] > div[data-syiro-component="button"][data-syiro-component-type="basic"]:after {
+  width: 100%;
 }
 div[data-syiro-component="player-control"] > div[data-syiro-component="button"][data-syiro-component-type="basic"][data-syiro-minor-component="player-button-fullscreen"]:after {
   content: "\f101";
@@ -533,7 +536,7 @@ div[data-syiro-minor-component="player-menu"] > div[data-syiro-component="list"]
 div[data-syiro-component="audio-player"] {
   float: left;
   height: auto;
-  background-color: #fafafa;
+  background-color: #333333;
 }
 div[data-syiro-component="audio-player"] > audio {
   display: hidden;
@@ -567,7 +570,7 @@ div[data-syiro-component="audio-player"]:not([data-syiro-audio-player="mini"]) >
   display: none;
 }
 div[data-syiro-component="audio-player"]:not([data-syiro-audio-player="mini"]) > div[data-syiro-component="player-control"] {
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgba(51, 51, 51, 0.75);
 }
 div[data-syiro-component="audio-player"]:not([data-syiro-audio-player="mini"]) > div[data-syiro-component="player-control"][data-syiro-component-streamstyling] {
   margin-top: 100px;
@@ -612,7 +615,7 @@ div[data-syiro-component="audio-player"] > div[data-syiro-component="player-cont
   padding: 0 !important;
 }
 div[data-syiro-component="audio-player"] > div[data-syiro-component="player-control"] > div[data-syiro-component="button"]:after {
-  color: #333333;
+  color: #ffffff;
 }
 div[data-syiro-component="audio-player"] > div[data-syiro-component="player-control"] > section {
   float: left;
@@ -623,7 +626,7 @@ div[data-syiro-component="audio-player"] > div[data-syiro-component="player-cont
 div[data-syiro-component="audio-player"] > div[data-syiro-component="player-control"] > section > b,
 div[data-syiro-component="audio-player"] > div[data-syiro-component="player-control"] > section label {
   float: left;
-  color: #333333;
+  color: #ffffff;
   width: 100%;
 }
 div[data-syiro-component="audio-player"] > div[data-syiro-component="player-control"] > section > b {
@@ -634,10 +637,10 @@ div[data-syiro-component="audio-player"] > div[data-syiro-component="player-cont
   font-size: 14px;
 }
 div[data-syiro-component="audio-player"] > div[data-syiro-minor-component="player-menu"] {
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgba(51, 51, 51, 0.75);
 }
 div[data-syiro-component="audio-player"] > div[data-syiro-minor-component="player-menu"] > label {
-  color: #333333;
+  color: #ffffff;
 }
 div[data-syiro-component="video-player"] {
   float: left;
